[package]
name = "reading-syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
rustop = "1.1.2"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
